dark mode fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -207,13 +207,8 @@ button:active,
 }
 
 select {
-	/* appearance: none;
-  padding: 6px 40px 6px 10px;
-  border-radius: var(--radius);
-  border: none; */
-	font-size: 1rem;
-	/* background: none;
-  z-index: 10; */
+	font-size: 0.9rem;
+	background: var(--background);
 }
 
 /* .select-container {
